src/objects/ffct__ConnectionsCustomObject__c.object
<CustomObject>
    <description>Details of a custom object referenced in a connection.</description>
    <fields>
        <fullName>ffct__Connection__c</fullName>
        <label>Object&apos;s Connection</label>
        <referenceTo>ffct__Connection__c</referenceTo>
        <relationshipName>ConnectionsCustomObjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Connection&apos;s Custom Object</label>
    <nameField>
        <label>ConnectionsCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection&apos;s Custom Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>